Changelog
=========

8.4-dev - (unreleased)
----------------------
* Bug fix: fixed featured images within the portlets of the right column from
  spilling the floated text below them
  [ichimdav refs #16673]
* Bug fix: fixed float issue of relatedItems on themes dc pages
  [ichimdav]

8.3 - (2013-10-07)
------------------
* Change: check if notoc is present instead of strict equal when excluding 
  headings from the TOC
  [ichimdav refs #16929]

8.2 - (2013-10-07)
------------------
* Change: removed left column from the promotion gallery on our frontpage
  [ichimdav refs #16738]
* Bug fix: Convert daviz iframes relative urls to absolute urls using
  eea.converter utility method in order to avoid restricted traverse errors
  within PDF export
  [voineali refs #16946]

8.1 - (2013-10-04)
------------------
* Bug fix: fixed loading of whatsnewgallery tabs on data-and-maps pages
  [ichimdav #16914]
* Upgrade step: Install Palatino Linotype and Verdana fonts
  [voineali refs #16802]
* Change: move the last two items from the globalnav within the
  secundary-navigation instead of using harcoded ids
  [ichimdav refs #16878]
* Change: removed check for review state when displaying SOERKeyFacts on themes
  pages
  [ichimdav refs #9476]
* Change: changed style of keyFact in order to diferenciate it from callout
  [ichimdav refs #9476]
* Feature: Added generic PDF cover and PDF print CSS for all EEA content-types
  [voineali refs #14904]
* Bug fix: fixed CSS for IE9 for what's new tabs
  [soniaand refs #16888]

8.0 - (2013-09-23)
------------------
* Change: lowered the font-size of portletHeader from manage pages now that
  the draggable actions are displayed
  [ichimdav fixes #16720]
* Feature: added style for keyFact class
  [ichimdav refs #9476]
* Feature: Improved print.css also used by PDF generators
  [voineali refs #14904]
* Bug fix: fixed login_form redirect after upgrade to Plone 4.3
  [ichimdav #16707]